[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaseinvest-api"
version = "0.4.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "MaxxRK"}
]
keywords = ["CHASE", "API"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "zendriver",
    "anyio",
    "curl-cffi",
]

[tool.setuptools]
packages = ["chase"]

[tool.ruff]
target-version = "py312"
extend = "./styles/ruff.toml"
include = ["src/*"]
exclude = ["src/vendors/*", "guides/*"]
ignore = ["PLR1702", "PLR0915", "PLR0914","PLR0912", "C901", "T201"]
